# scafalra

./: .editorconfig  .eslintignore  .eslintrc.json  .gitattributes  .gitignore  .pnp.cjs  .prettierignore  .swcrc  .yarnrc.yml  CHANGELOG.md  Cargo.toml  LICENSE  README.md  build.rs  cliff.toml  justfile  package.json  pnpm-lock.yaml  rome.json  rust-toolchain.toml  rustfmt.toml  taplo.toml  tsconfig.build.json  tsconfig.debug.json  tsconfig.json  tsup.config.ts  vitest.config.ts
.cargo/: config.toml
.github/workflows/: check.yml  ci.yml  release.yml
.husky/: pre-commit
assets/: release-query-response.json  repo-query-error.json  repo-query-response.json
fixtures/: print-table.txt
fixtures/.scafalra/: scafalra.json
scripts/: clean.js  gen-test-repo.js  install-yarn-berry.sh  pnpm-up.js  pnpm-up.mjs  publish.sh  rmrf.js
src/: api.rs  bin.ts  cli.rs  cli.ts  colorize.rs  config.rs  debug.rs  error.rs  error.ts  github-api.ts  github-graphql-api.ts  github_api.rs  index.ts  interactive.rs  json.rs  json_content.rs  logger.ts  macros.rs  main.rs  path_ext.rs  repository.rs  repository.ts  repository_config.rs  repotitory.rs  scafalra.rs  scafalra.ts  store.rs  store.ts  sub_template.rs  template.rs  testing.rs  toml_content.rs  types.d.ts  user-config.ts  utf8_path.rs  utils.rs  utils.ts
src/github_api/: gql.rs  gql_query_response.rs  mod.rs  release.gql  release.rs  repo.gql  repo.rs
test/: cli.spec.ts  github-api.spec.ts  index.spec.ts  utils.ts
