[package]
name = "scafalra"
version = "0.6.0"
edition = "2021"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "scafalra is a command-line interface tool for manage scaffold"
repository = "https://github.com/shixinhuang99/scafalra"
homepage = "https://github.com/shixinhuang99/scafalra"
documentation = "https://github.com/shixinhuang99/scafalra"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["scaffold"]
readme = "README.md"
exclude = ["assets/*"]

[dependencies]
anyhow = "1.0.70"
camino = "1.1.6"
chrono = "0.4.24"
clap = { version = "4.1.13", features = ["derive"] }
dircpy = { version = "0.3.15", default-features = false }
flate2 = "1.0.25"
fs-err = "2.9.0"
home = "0.5.4"
owo-colors = "3.5.0"
regex = "1.7.3"
remove_dir_all = "0.8.2"
self-replace = "1.3.7"
semver = "1.0.20"
serde = { version = "1.0.158", features = ["derive"] }
tabled = { version = "0.14.0", features = ["color"] }
tar = "0.4.38"
term_grid = "0.2.0"
toml = "0.8.0"
ureq = { version = "2.6.2", features = ["json"] }

[target.'cfg(windows)'.dependencies]
zip = "0.6.6"

[dev-dependencies]
mockito = "1.0.2"
pretty_assertions = "1.3.0"
tempfile = "3.5.0"

[profile.release]
strip = true
lto = true
panic = "abort"
opt-level = 3
