[package]
name = "scafalra"
version = "1.4.0"
edition = "2021"
authors = ["shixinhuang99 <shixinhuang99@gmail.com>"]
description = "scafalra(sca) is a command-line interface tool for manage templates"
repository = "https://github.com/shixinhuang99/scafalra"
license = "MIT"
categories = ["command-line-utilities"]
keywords = ["scaffold", "template"]
include = ["Cargo.toml", "Cargo.lock", "README.md", "LICENSE", "src/**"]

[[bin]]
name = "sca"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.70"
chrono = "0.4.24"
clap = { version = "4.5.3", features = ["derive"] }
dircpy = { version = "0.3.15", default-features = false }
directories = "5.0.1"
inquire = { version = "0.7.2", default-features = false, features = [
  "crossterm",
  "fuzzy",
] }
owo-colors = { version = "3.5.0", features = ["supports-colors"] }
regex = "1.7.3"
remove_dir_all = "0.8.2"
serde = { version = "1.0.158", features = ["derive"] }
serde_json = { version = "1.0.108", features = ["preserve_order"] }
strsim = "0.11.0"
tabled = { version = "0.14.0", features = ["color"] }
term_grid = "0.2.0"
ureq = "2.6.2"
zip = "0.6.6"

[dev-dependencies]
mockito = "1.0.2"
path-slash = "0.2.1"
similar-asserts = "1.5.0"
tempfile = "3.5.0"
test-case = "=3.3.1"

[profile.release]
strip = true
lto = true
panic = "abort"
codegen-units = 1

[features]
_try = []
